--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -86,9 +86,9 @@ jobs:
         run: |
          docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
          
-      # - name: Stop and remove container if running
-      #   run: |
-      #    docker ps -q --filter "name=spotify" | grep -q . && docker stop mlproj && docker rm -fv mlproj
+      - name: Stop and remove container if running
+        run: |
+         docker ps -q --filter "name=musicapp" | grep -q . && docker stop musicapp && docker rm -fv musicapp
        
       - name: Run Docker Image to serve users
         run: |
